--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -1,158 +1,10 @@
-:root {
-  --contents-size: calc(100svw - (3 * var(--padding)));
-  --main-flex-direction: column;
-  --main-align-items: center;
-  --main-height: calc(
-    var(--contents-size) + var(--controls-size) + (2 * var(--padding))
-  );
-  --aside-flex-direction: row;
-  --aside-height: auto;
-  --aside-width: var(--contents-size);
-  --aside-max-height: var(--controls-size);
-  --aside-max-width: var(--contents-size);
-}
-
-@media screen and (min-width: 600px), screen and (min-width: 100svh) {
-  :root {
-    --contents-size: calc(
-      100vmin - var(--controls-size) - (3 * var(--padding))
-    );
-    --main-flex-direction: row;
-    --main-align-items: flex-start;
-    --main-height: calc(var(--contents-size) + (2 * var(--padding)));
-    --aside-flex-direction: column;
-    --aside-height: var(--contents-size);
-    --aside-width: auto;
-    --aside-max-height: var(--contents-size);
-    --aside-max-width: var(--controls-size);
-  }
-}
-
-.app {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 100svh;
-  width: 100svw;
-}
-
-.header {
-  align-items: center;
-  display: flex;
-  height: var(--controls-size);
-  justify-content: flex-end;
-  padding: 0 var(--padding);
-  width: 100%;
-}
 .header::after {
   background-color: var(--stroke-color);
+  bottom: 0;
   content: '';
   height: 1px;
   left: 0;
   opacity: 0.5;
   position: absolute;
   right: 0;
-  top: var(--controls-size);
-}
-.header-button {
-  align-items: center;
-  cursor: pointer;
-  display: flex;
-  flex-wrap: nowrap;
-  gap: calc(var(--padding) / 2);
-  height: var(--header-item-height);
-  padding: calc(var(--padding) / 2) calc(var(--padding) / 2 + 2px);
-}
-.header-button-text {
-  font-family: monospace;
-  font-size: 13px;
-  line-height: 13px;
-  white-space: nowrap;
-}
-
-.main {
-  align-items: var(--main-align-items);
-  display: flex;
-  flex-direction: var(--main-flex-direction);
-  gap: var(--padding);
-  height: var(--main-height);
-  justify-content: center;
-  padding: var(--padding);
-  width: 100%;
-}
-
-.main-contents {
-  display: flex;
-  flex-wrap: wrap;
-  height: var(--contents-size);
-  width: var(--contents-size);
-}
-
-.aside {
-  background-color: var(--menu-color);
-  border-radius: 2px;
-  display: flex;
-  flex-direction: var(--aside-flex-direction);
-  height: var(--aside-height);
-  max-width: var(--aside-max-width);
-  width: var(--aside-width);
-}
-
-.app-title {
-  color: #000000;
-  flex-grow: 1;
-  font-family: monospace;
-  font-size: 16px;
-  line-height: 16px;
-  padding: var(--padding);
-  white-space: nowrap;
-}
-
-.candidate-token {
-  position: absolute;
-  right: 2px;
-  top: 2px;
-  width: 30%;
-}
-
-.candidate-token .token {
-  margin: 0;
-}
-
-.toggle-button {
-  border-color: var(--stroke-color-alpha);
-  border-radius: 2px;
-  border-style: solid;
-  border-width: 1px;
-  cursor: pointer;
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 8px;
-  height: var(--header-item-height);
-  margin: calc(var(--padding) / 2);
-  padding: calc(var(--padding) / 2) calc(var(--padding) / 2 + 2px);
-  transition: border-color 150ms ease;
-}
-.toggle-button:hover {
-  border-color: var(--stroke-color);
-}
-
-.toggle-button input {
-  cursor: pointer;
-  pointer-events: none;
-}
-
-.react-icon.header-button {
-  padding: 4px;
-}
-
-@media screen and (max-width: 599px) {
-  .hide-for-mobile {
-    display: none;
-  }
-}
-@media screen and (min-width: 600px) {
-  .hide-for-desktop {
-    display: none;
-  }
 }
