--- a/src/app/root.css
+++ b/src/app/root.css
@@ -3,6 +3,7 @@
   --background-color: #f0f0f8;
   --stroke-color: #444444;
   --border-color: #000000;
+  --aside-color: #7c7c81;
 }
 
 html {
@@ -42,11 +43,4 @@ button:not(:disabled) {
   margin: 0;
   padding: 0;
   position: relative;
-}
-
-.game {
-  background-color: lightgreen;
-}
-aside {
-  background-color: lightsalmon;
 }
