--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -1,4 +1,4 @@
-.header::after {
+/* .header::after {
   background-color: var(--stroke-color);
   bottom: 0;
   content: '';
@@ -7,4 +7,8 @@
   opacity: 0.5;
   position: absolute;
   right: 0;
+} */
+
+.header {
+  box-shadow: 0 1px 0 var(--stroke-color);
 }
