--- a/src/app/root.css
+++ b/src/app/root.css
@@ -1,7 +1,7 @@
 :root {
   --text-color: #222222;
   --background-color: #f0f0f8;
-  --stroke-color: #44444444;
+  --stroke-color: #444444;
   --border-color: #000000;
   --aside-color: #7c7c81;
   --accent-color: #558bff;
