--- a/src/app/root.css
+++ b/src/app/root.css
@@ -7,6 +7,10 @@
   --accent-color: #558bff;
 }
 
+:root {
+  --token-padding: 6px;
+}
+
 html {
   background-color: var(--background-color);
   overflow-x: hidden;
