--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -1,3 +1,34 @@
 .header {
   box-shadow: 0 1px 0 var(--stroke-color);
+  display: flex;
+  gap: 16px;
+}
+
+.header-text {
+  display: flex;
+  gap: inherit;
+}
+
+.title {
+  font-family: serif;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.date {
+  font-family: serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.difficulty {
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  justify-self: center;
+  text-transform: capitalize;
+}
+
+.expand {
+  flex-grow: 1;
 }
