--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -11,8 +11,9 @@
 
 .title {
   font-family: serif;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 700;
+  letter-spacing: -0.3px;
 }
 
 .date {
