--- a/src/app/components/Option.css
+++ b/src/app/components/Option.css
@@ -1,28 +1,50 @@
+button.token-option,
 button.candidate-option {
-  --gap: 5px;
   aspect-ratio: 1;
   background-color: transparent;
   border: none;
   filter: drop-shadow(0 0 0 #00000033);
-  margin-left: var(--gap);
   max-height: 100%;
+}
+button.token-option {
+  max-width: calc(100% / var(--golden-ratio));
+  transition:
+    filter 150ms ease,
+    transform 150ms ease;
+}
+button.candidate-option {
+  --gap: 5px;
+  margin-left: var(--gap);
   max-width: calc(100% - (100% / var(--golden-ratio)) - var(--gap));
   transition:
     filter 100ms ease,
     transform 100ms ease;
 }
 
+button.token-option:not(:disabled):hover {
+  filter: drop-shadow(2.5px 4px 2px #00000099);
+  transform: translateX(-2px) translateY(-2px);
+}
 button.candidate-option:not(:disabled):hover {
   filter: drop-shadow(1.5px 3px 2px #00000099);
   transform: translateX(-1px) translateY(-1px);
 }
 
+button.token-option:hover:active {
+  filter: drop-shadow(1.5px 2.5px 2px #00000099);
+  transform: translateX(-1px) translateY(-1px);
+  transition-duration: 75ms;
+}
 button.candidate-option:hover:active {
   filter: drop-shadow(0.5px 1.5px 2px #00000099);
   transform: translateX(-0.5px) translateY(-0.5px);
-  transition-duration: 75ms;
+  transition-duration: 50ms;
 }
 
+button.token-option:disabled .token svg {
+  filter: brightness(0.5);
+  opacity: 0.5;
+}
 button.candidate-option:disabled .token svg {
   filter: brightness(0.5);
   opacity: 0.5;
